feat: implement pages features, hooks, context, and functional unit and e2e test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["jest", "node", "@testing-library/jest-dom"],
+    "types": ["jest", "node", "@testing-library/jest-dom", "cypress"],
     "plugins": [
       {
         "name": "next"
