--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "e2e": "npm run dev & cypress open"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
@@ -24,11 +25,13 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/aria-query": "^5.0.4",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.13.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "jest": "^29.7.0",
